--- a/windows/sass/layout/_login.scss
+++ b/windows/sass/layout/_login.scss
@@ -5,23 +5,49 @@
 
 
 .logo{   
-	position: absolute;	
-    top: 50px;
+	
     img
     {
         height: 80px;;
     }    
 }
 .height100{height: 100%;}
+.signupview{
+    width: 400px;
+    height: 550px; 
+    background-color:#fff;     
+    .loginform
+    {
+    padding:10px 30px 0 30px;
+    }
+    .md-button 
+    {
+        min-width:220px;
+        min-height: 40px;
+        
+    }
+
+}
 .loginview{
     width: 400px;
-    height: 470px; 
+    height: 250px; 
     background-color:#fff;     
     .loginform
     {
     padding:10px 30px 0 30px;
     }
 
+}
+.signtxt
+{
+    color:$whitecolor;    
+    font-weight: 300;
+    a
+    {
+        color:$whitecolor;
+        font-weight: 400;
+        padding-left:5px; 
+    }
 }
 
 }
